# CruiserChat

./: CMakeLists.txt  README.md  mac-setup.sh  setup.sh
cpp/: CMakeLists.txt
cpp/include/: chatBot.h
cpp/source/: chatbot.cpp  main.cpp
cpp/src/: main.cpp
cpp/src/tokenizer/: tokenizer.cpp  tokenizer.hpp
include/: chatBot.h
python/: cruiserchat.py
source/: chatbot.cpp  main.cpp
tokenizer/: tokenizer.cpp  tokenizer.hpp
